# SJF-Scheduler

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp  process.h
src/sjf/: sjf_scheduler.cpp  sjf_scheduler.h
